# statstrike

./: .gitignore  README.md  fixtures.csv  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: binary_home.yaml  default.yaml  enhanced.yaml  test_actual.yaml  test_xg.yaml  test_xg_efficient.yaml
data/raw/premier/: epl-xg-data2014-25.csv
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css
src/premier_league_predictor/: __init__.py  cli.py  config.py  data.py  evaluation.py  features.py  model.py  prediction.py  server.py  training.py
tests/: test_features.py
