[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "premier-league-predictor"
version = "0.1.0"
description = "Train baseline ML models to predict Premier League match outcomes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "pyyaml>=6.0.0",
  "joblib>=1.4.0",
  "catboost>=1.2.8",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.1",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
pl-predictor = "premier_league_predictor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
